# ai-grc-compliance

./: .env.vercel  .gitignore  .vercelignore  CEO_PLAYBOOK_90DAY.md  GET_STARTED.md  LOVABLE_PRODUCT_BUILD_PROMPT.md  PROJECT_OVERVIEW.md  Pipfile  QUICK_REFERENCE_STRATEGY.md  QUICK_START.md  README.md  ROADMAP_V2.md  SETUP_GUIDE.md  START_APP.bat  STRATEGIC_EXECUTION_PLAN.md  check_tables.py  debug_onboarding.js  docker-compose.yml  migrate_supabase.py  onboarding_test.json  package.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
api/: debug.py  generate-policy.js  index.py  pyproject.toml
backend/: .env.example  Bayeaux_AI_Platform_Meta_Ad.html  COMPLAI_Implementation_Plan.md  Compliance_Assistant_SDK_Meta_Ad.html  pencil-new.pen  requirements.txt  run.py  test_claude.py  test_db_connection.py
backend/.claude/: settings.local.json
backend/app/: __init__.py  database.py  main.py
backend/app/api/: audit.py  compliance.py  storage.py
backend/app/core/: auth.py  config.py  rate_limit.py  security_headers.py
backend/app/knowledge_base/: __init__.py  iso27001.py  iso42001.py
backend/app/models/: database_models.py  schemas_old.py
backend/app/services/: assessment_service.py  audit_pack_service.py  audit_service.py  claude_service.py  (+5 more)
backend/tests/: test_compliance.py
design-system/complai/: MASTER.md
dpo-assist/: index.html  package.json  tailwind.config.js  vite.config.js
dpo-assist/src/: App.jsx  index.css
frontend/: index.html  package-lock.json  package.json  start-frontend-fullpath.bat  start-frontend.bat  tailwind.config.js  vite.config.js  vite.config.js.timestamp-1772345770074-195a9465a7782.mjs
frontend/src/: App.jsx  index.css
scripts/: security_audit.py
(+65 files in other folders)
