[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi==0.115.0", "uvicorn==0.30.0", "pydantic==2.9.0", "pydantic-settings==2.5.0", "sqlalchemy==2.0.35", "psycopg2-binary==2.9.9", "anthropic==0.39.0", "openpyxl==3.1.5", "python-dotenv==1.0.1", "python-multipart==0.0.12", "httpx==0.27.0" ]
requires-python = ">=3.12"
