[project]
name = "app"
version = "0.1.0"
dependencies = [ "fastapi>=0.115.0", "uvicorn>=0.30.0", "pydantic>=2.10.0", "pydantic-settings>=2.7.0", "sqlalchemy>=2.0.35", "psycopg[binary]>=3.1.0", "anthropic>=0.40.0", "openpyxl>=3.1.5", "python-dotenv>=1.0.1", "python-multipart>=0.0.12", "httpx>=0.27.0" ]
requires-python = "==3.12.*"
